# Backend

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  fly.toml  pyproject.toml
alembic/: env.py
alembic/versions/: 08211870f269_added_table.py  0c6bbda6cb0f_update_schema.py  2024-07-05_initial.py  2024-07-05_intial_settings.py  2024-07-08_add_image_model.py  2024-07-10_intial_settings.py  2024-07-12_add_chat_model_edit_user.py  2024-07-12_add_report_model.py  2024-07-12_edit_image_model.py  2024-07-14_intial_settings.py  2024-07-16_add_chat_message_link.py  2024-07-29_add_withdrawal_model.py  2024-08-11_edit_emotion_reportn.py  2024-08-11_edit_image_message_model.py  2024-08-11_edit_image_message_report_emotion_model.py  2024-08-18_edit_image_link.py  2024-08-18_image_model_to_timestamp.py  2024-08-21_edit_json_tags.py  2024-08-24_add_snowflake_report.py  2024-08-24_on_delete_option.py  2024-08-24_user_delete_reasons.py  2024-09-05_add_reference_code.py  2024-09-06_refreal_code_expire.py  2024-09-06_refreal_code_expire_created.py  2024-09-25_intial_settings.py  2f6017678709_initialize.py  34c5463cdd2c_initialize.py  3c874d5533a4_auto_migration.py  45f78943792c_postgresql_migration.py  6322f93dfa5f_initialize.py  892b7693ab65_initialize.py  8c9dfb692c01_initialize.py  a42be720ca06_auto_migration.py  aba4dbd3b6d8_auto_migration.py  b07535f17ecb_auto_migration.py  c9e1f7e25cfb_initial_migration.py  d54f041c9d4e_lemon_migration.py  dddc25f7484d_initialize.py  (+1 more)
app/: main.py
app/auth/: __init__.py  (+3 more)
docker/: Dockerfile  Dockerfile.local  docker-entrypoint.sh
(+64 files in other folders)
