[tool.poetry]
name = "memind-api"
version = "0.1.0"
description = "memind-core-api"
authors = ["Luceta <57941164+Luceta@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.20"
gunicorn = "^21.2.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-dotenv = "^1.0.0"
redis = "^5.0.1"
sqladmin = "^0.16.1"
pymysql = "^1.1.0"
mysql = "^0.0.3"
alembic = "^1.13.1"
cryptography = "^42.0.5"
mysqlclient = "^2.2.4"
twilio = "^9.1.1"
phonenumbers = "^8.13.38"
openai = "^1.35.4"
langchain = "^0.2.6"
langchain-community = "^0.2.6"
langchain-openai = "^0.1.10"


[tool.poetry.group.dev.dependencies]
httpx = "^0.24.1"
black = "^23.9.0"
pytest = "^7.4.2"
pymysql = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
